[gd_scene load_steps=4 format=3 uid="uid://fiiq6mgymvyn"]

[ext_resource type="Script" path="res://src/test_elements/enemy/jeff.gd" id="1_04ixf"]

[sub_resource type="LabelSettings" id="LabelSettings_mrcg0"]
font_size = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0y8b"]
size = Vector2(50, 100)

[node name="Jeff" type="Node2D"]
script = ExtResource("1_04ixf")

[node name="HPRegenTimer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 50.0
offset_bottom = 100.0
color = Color(1, 1, 0, 1)

[node name="Label" type="Label" parent="."]
offset_top = -35.0
offset_right = 50.0
text = "JEFF"
label_settings = SubResource("LabelSettings_mrcg0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(25, 50)
shape = SubResource("RectangleShape2D_a0y8b")

[connection signal="timeout" from="HPRegenTimer" to="." method="_on_hp_regen_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
